--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 body {
   background-color: #43a0c4;
   font-family: Helvetica, sans-serif;
-  margin: 5% 15%;
+  margin: 5% 10%;
 }
 h1 {
   color: White; 
   font-size: 50px;
 }
 img{
-  width: 40%;
+  padding: 3% 1%;
 }
 h2{
   text-decoration: Underline; 
   color: white;
 }
 h3{ 
-  font-weight: bold
+  font-weight: bold;
   font-size: 25px;
 }
 h4{
@@ -25,7 +25,7 @@ h4{
   text-align: right;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 100px;
+  padding-bottom: 10px;
   padding-top: 10px;
   font-size: 10px;
 }
@@ -36,7 +36,7 @@ h4{
   padding-top: 10px;
   text-align: justify;
 }
-.edu, .exp{
+.edu, .exp {
   border-top: black solid 1px;
   padding-left: 20px;
   padding-right: 20px;
